<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Qgym</string>
    <string name="db">GymnasticsDB</string>
    <string name="action_settings">Settings</string>
    <string name="newMeet">Add New Meet</string>
    <string name="addNewMeet">Enter the Name of the Meet</string>
    <string name="gymanst">Gymnast: </string>
    <string name="vault">Vault</string>
    <string name="bars">Bars</string>
    <string name="beam">Beam</string>
    <string name="floor">Floor</string>
    <string name="preferences">Preferences</string>
    <string name="reports">Reports</string>
    <string name="title_activity_reports">Reports</string>
    <string name="title_activity_preferences">PreferencesActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="setDate">Set the Date for the Meet</string>
    <string name="set">Set</string>
    <string name="notes">Save Note</string>
    <string name="title_activity_report">Report</string>
    <string name="hello_world">Hello world!</string>
    <string name="save">Save</string>
    <string name="newMeetName">New Meet Name here</string>

</resources>
