<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragmentGymnastList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1,2,3">

    <TableRow
        android:layout_width="fill_parent">
        <TextView
            android:id="@+id/gymnast_name"
            android:text="@string/gymanst"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/gymnast_name_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"/>
        <ImageButton
            android:id="@+id/btn_notes"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:id="@+id/vault"
            android:text="@string/vault"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/bars"
            android:text="@string/bars"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/beam"
            android:text="@string/beam"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <TextView
            android:id="@+id/floor"
            android:text="@string/floor"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </TableRow>
    <TableRow>
        <EditText
            android:id="@+id/vault_val"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
        <EditText
            android:id="@+id/bars_val"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText
            android:id="@+id/beam_val"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
        <EditText
            android:id="@+id/floor_val"
            android:inputType="numberDecimal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>
    </TableRow>

</TableLayout>